@@ -1,7 +1,5 @@
 package org.jabref.gui;
 
-import java.io.IOException;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.sql.SQLException;
 import java.util.ArrayList;
@@ -14,20 +12,18 @@ import javafx.scene.input.KeyEvent;
 import javafx.stage.Screen;
 import javafx.stage.Stage;
 
-import org.jabref.gui.dialogs.BackupUIManager;
 import org.jabref.gui.help.VersionWorker;
 import org.jabref.gui.icon.IconTheme;
 import org.jabref.gui.importer.ParserResultWarningDialog;
 import org.jabref.gui.importer.actions.OpenDatabaseAction;
 import org.jabref.gui.keyboard.TextInputKeyBindings;
 import org.jabref.gui.shared.SharedDatabaseUIManager;
-import org.jabref.logic.autosaveandbackup.BackupManager;
-import org.jabref.logic.importer.OpenDatabase;
 import org.jabref.logic.importer.ParserResult;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.logic.shared.DatabaseNotSupportedException;
 import org.jabref.logic.shared.exception.InvalidDBMSConnectionPropertiesException;
 import org.jabref.logic.shared.exception.NotASharedDatabaseException;
+import org.jabref.logic.util.WebViewStore;
 import org.jabref.preferences.GuiPreferences;
 import org.jabref.preferences.PreferencesService;
 
@@ -54,6 +50,8 @@ public class JabRefGUI {
         this.preferencesService = preferencesService;
         this.correctedWindowPos = false;
 
+        WebViewStore.init();
+
         mainFrame = new JabRefFrame(mainStage);
 
         openWindow(mainStage);
@@ -61,7 +59,7 @@ public class JabRefGUI {
         new VersionWorker(Globals.BUILD_INFO.version,
                 mainFrame.getDialogService(),
                 Globals.TASK_EXECUTOR,
-                preferencesService.getVersionPreferences())
+                preferencesService.getInternalPreferences())
                 .checkForNewVersionDelayed();
     }
 
@@ -74,8 +72,8 @@ public class JabRefGUI {
         if (guiPreferences.isWindowMaximised()) {
             mainStage.setMaximized(true);
         } else if ((Screen.getScreens().size() == 1) && isWindowPositionOutOfBounds()) {
-            // corrects the Window, if its outside of the mainscreen
-            LOGGER.debug("The Jabref Window is outside the Main Monitor\n");
+            // corrects the Window, if it is outside the mainscreen
+            LOGGER.debug("The Jabref window is outside the main screen\n");
             mainStage.setX(0);
             mainStage.setY(0);
             mainStage.setWidth(1024);
@@ -95,7 +93,7 @@ public class JabRefGUI {
         root.getChildren().add(JabRefGUI.mainFrame);
 
         Scene scene = new Scene(root, 800, 800);
-        preferencesService.getTheme().installCss(scene);
+        Globals.getThemeManager().installCss(scene);
 
         // Handle TextEditor key bindings
         scene.addEventFilter(KeyEvent.KEY_PRESSED, event -> TextInputKeyBindings.call(scene, event));
@@ -128,14 +126,16 @@ public class JabRefGUI {
 
     private void openDatabases() {
         // If the option is enabled, open the last edited libraries, if any.
-        if (!isBlank && preferencesService.getGuiPreferences().shouldOpenLastEdited()) {
+        if (!isBlank && preferencesService.getImportExportPreferences().shouldOpenLastEdited()) {
             openLastEditedDatabases();
         }
+
+        // From here on, the libraries provided by command line arguments are treated
 
         // Remove invalid databases
         List<ParserResult> invalidDatabases = bibDatabases.stream()
                                                           .filter(ParserResult::isInvalid)
-                                                          .collect(Collectors.toList());
+                                                          .toList();
         failed.addAll(invalidDatabases);
         bibDatabases.removeAll(invalidDatabases);
 
@@ -263,35 +263,8 @@ public class JabRefGUI {
             return;
         }
 
-        for (String fileName : lastFiles) {
-            Path dbFile = Path.of(fileName);
-
-            // Already parsed via command line parameter, e.g., "jabref.jar somefile.bib"
-            if (isLoaded(dbFile) || !Files.exists(dbFile)) {
-                continue;
-            }
-
-            if (BackupManager.backupFileDiffers(dbFile)) {
-                BackupUIManager.showRestoreBackupDialog(mainFrame.getDialogService(), dbFile);
-            }
-
-            ParserResult parsedDatabase;
-            try {
-                parsedDatabase = OpenDatabase.loadDatabase(
-                        dbFile,
-                        preferencesService.getGeneralPreferences(),
-                        preferencesService.getImportFormatPreferences(),
-                        Globals.getFileUpdateMonitor());
-            } catch (IOException ex) {
-                LOGGER.error("Error opening file '{}'", dbFile, ex);
-                parsedDatabase = ParserResult.fromError(ex);
-            }
-            bibDatabases.add(parsedDatabase);
-        }
-    }
-
-    private boolean isLoaded(Path fileToOpen) {
-        return bibDatabases.stream().anyMatch(pr -> pr.getPath().isPresent() && pr.getPath().get().equals(fileToOpen));
+        List<Path> filesToOpen = lastFiles.stream().map(file -> Path.of(file)).collect(Collectors.toList());
+        getMainFrame().getOpenDatabaseAction().openFiles(filesToOpen);
     }
 
     public static JabRefFrame getMainFrame() {
